--- a/src/App.scss
+++ b/src/App.scss
@@ -1332,3 +1332,99 @@ button {
     }
   }
 }
+
+.footer {
+  text-align: left;
+}
+
+.footer-inner {
+  position: relative;
+  background-color: #434a54;
+  color: #fff;
+  font-size: 14px;
+  padding: 24px 0;
+}
+
+.footer-wrapper {
+  position: relative;
+  width: 100%;
+  padding: 0 24px;
+  overflow: auto;
+}
+
+.footer-links-section {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 24px;
+  justify-content: space-around;
+}
+
+.footer-links-section::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 0.5px;
+  background-color: #656d78;
+  margin-top: 12px;
+}
+
+.footer-links-section-container {
+  .title {
+    height: 20px;
+    font-weight: 700;
+    font-size: 16px;
+    text-transform: uppercase;
+    color: inherit;
+    text-decoration: none;
+  }
+  .footer-link-list {
+    display: flex;
+    flex-direction: column;
+    padding: 12px 0;
+
+    a {
+      margin-bottom: 6px;
+    }
+  }
+
+  .link-box {
+    padding: 12px 0;
+
+    p {
+      font-weight: 400;
+      font-size: 14px;
+      margin: 0;
+      padding: 0;
+    }
+
+    .footer-link-list {
+      display: flex;
+      flex-direction: row;
+
+      a {
+        fill: #aab2bd;
+        width: 24px;
+        height: 24px;
+        margin-right: 0.5em;
+      }
+    }
+  }
+}
+
+.footer-copyright-section {
+  display: flex;
+  flex-wrap: wrap;
+
+  div {
+    margin-right: auto;
+  }
+
+  a {
+    margin-right: 24px;
+  }
+
+  a:last-child {
+    margin-right: unset;
+  }
+}
